parser/src/test/resources/corpus/valid/17_let_bps.ff
rule "Let Bps" {
  let spread_a = 25 bps
  let spread_b = 100 bps
}
