parser/src/test/resources/corpus/invalid/42_money_no_amount.ff
rule "Leading Operator" {
  let x = + 5
}
